[metadata]
name = av1clip
version = 0.1.0
author = lmaonator
author_email = lmaonator@gmail.com
description = A cli script to create .webm clips using mpv, svt-av1 and ffmpeg
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lmaonator/av1clip
project_urls =
    Bug Tracker = https://github.com/lmaonator/av1clip/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Multimedia :: Video :: Conversion
    Topic :: Utilities

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.entry_points]
console_scripts =
    av1clip = av1clip.av1clip:main

[options.packages.find]
where = src

[flake8]
max-line-length = 119
